--- a/index.html
+++ b/index.html
@@ -1,33 +1,16 @@
-<!-- <!DOCTYPE html> -->
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Webscockets 101</title>
+    <meta charset="UTF-8" />
+    <title>WebSocket Chat App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <!-- <div id="free-chat">
-        <h2>whatsup</h2>
-        <div id="chat-window">
-            <div id="output"></div>
-            <div id="feedback"></div>
-        </div>
-        <input id="handle" type="text" placeholder="Handle" />
-        <input id="message" type="text'" placeholder="Message" />
-        <button id="send">Send</button>
-    </div> -->
-
-    <form name="publish">
-      <input
-        id="message-input"
-        type="text"
-        name="message"
-        placeholder="Type in Message"
-        maxlength="50"
-      />
-      <input type="submit" value="Submit" />
+    <div id="chat-window"></div>
+    <form id="message-form">
+      <input type="text" id="message-input" placeholder="Type your message here" />
+      <button type="submit">Send</button>
     </form>
-    <!-- <div id="handles"></div> -->
-    <div id="messages"></div>
+    <script type="module" src="chat.js"></script>
   </body>
-  <script type="module" src="chat.js"></script>
 </html>
