--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
       <input type="text" id="message-input" placeholder="Type your message here" />
       <button type="submit">Send</button>
     </form>
-    <script type="module" src="chat.js"></script>
+    <script src="chat.js"></script>
   </body>
 </html>
