--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div id="chat-window"></div>
-    <form id="message-form">
-      <input type="text" id="message-input" placeholder="Type your message here" />
-      <button type="submit">Send</button>
-    </form>
-    <script src="chat.js"></script>
+    <div id="container">
+      <div id="header"><h1>Welcome to The Chat Room</h1></div>
+      <div id="chat-window"></div>
+      <form id="message-form">
+        <input type="text" id="message-input" placeholder="Type your message here" />
+        <button type="submit">Send</button>
+      </form>
+    </div>
+    <script type="module" src="chat.js"></script>
   </body>
 </html>
